# Benchmark-Model-xView2

./: .env.example  .gitignore  README.md  fix_encoding.py  fix_remaining.py  inspect_checkpoint.py  pyproject.toml  run_test.bat  run_tests.bat  tree_check.txt
configs/: default.yaml
configs/tracks/: track1.yaml  track1_centroid_patch.yaml  track1_deploy.yaml  track1_pre_post_diff.yaml  track1_siamese.yaml  track2a.yaml  track2b.yaml  track2b_learned.yaml  track3.yaml  track4_vlm.yaml  track4_vlm_grounded.yaml
docs/: never_miss.md
reports/: benchmark_summary.json
reports/cv5/: best_epoch_per_fold.csv  cascade_test_per_fold.csv  cascade_test_summary.csv  (+1 more)
scripts/: bootstrap_tile_ci.py  build_buildings_csv.py  build_index.py  compare_metrics.py  eval_at_fp_budgets.py  eval_binary_cascade.py  eval_fema_3class.py  eval_run.py  eval_selective_vlm.py  eval_vlm.py  export_cnn_probs.py  export_predictions.py  extract_change_features.py  extract_embeddings.py  fuse_cnn_ensemble.py  fuse_vlm_scores.py  inspect_ckpt.py  make_cv_folds.py  make_oracle_crops.py  make_vlm_sample.py  plot_runs.py  rerank_minor.py  run_all_training.py  run_binary_cascade.py  run_cv5.py  run_lowo.py  run_lowo_mae.py  run_lowo_mae_ft.py  run_track.py  run_vlm.py  select_uncertain_cases.py  select_vlm_candidates.py  summarize_cascade_cv.py  summarize_cv.py  summarize_runs.py  train_binary_ensemble.py  train_damage.py  train_footprint_unet.py  train_mae.py  train_siamese_unet.py  (+1 more)
tests/: test_losses_and_augmentation.py  test_matching.py  test_nested_cv_and_threshold.py  test_polygons.py
(+46 files in other folders)
